# trailnext

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  package.json  pnpm-lock.yaml  tsconfig.json  vcpkg.json  vite.config.ts
.github/workflows/: linux.yml  macos.yml  windows.yml
FluentUI/: CMakeLists.txt
Proto/: CmakeLists.txt  proto.bat
lib/log4cplus/: log4cplusU.lib
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/command/: basic.rs
src-tauri/src/proxy/: init.rs  mod.rs  service.rs
src-tauri/src/utils/: http.rs  init.rs  mod.rs
src/components/: Menu.vue
src/i18n/: index.ts
src/i18n/locales/: en_US.ts  zh_CN.ts
src/route/: routes.ts
src/views/: App.vue
translate/: TrailNext_zh_CN.ts
util/: CMakeLists.txt
util/markdown/: markdown.cpp  markdown.h
