[package]
name = "trailnext"
version = "0.0.0"
description = "A Proxy Tool"
authors = ["loafman-kangjun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

service-manager = "0.6"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
