[package]
name = "trailnext"
version = "0.0.0"
description = "A Proxy Tool"
authors = ["loafman-kangjun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }

service-manager = "0.6"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tauri-plugin-clipboard-manager = "2.1.0-beta.0"
tauri-plugin-single-instance = "2.0.0-beta.5"
